Parce place mock
